<resources>
    <string name="app_name">News</string>
    <string name="schema">otpauth</string>
    <string name="app_qr_code_invalid">This QR code cannot be scanned.</string>
    <string name="app_secret_key_invalid">Your secret key invalid.</string>
    <string name="save_secret_key_success">Account %s added successfully.</string>
    <string name="update_secret_key_success">Account %s updated successfully.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_invalid_title">Error</string>
    <string name="dialog_scan_qr">Scan QR</string>
    <string name="dialog_enter_key">Enter setup key</string>
    <string name="dialog_add_token_title">Add Token</string>
    <string name="dialog_add_token_description">Do you want to add the token named\n%s</string>
    <string name="app_no_data">No data available, please add a new item.</string>
    <string name="app_copied">copied</string>
    <string name="app_account_name">User name</string>
    <string name="app_your_key">Your key</string>
    <string name="app_add">Add</string>
    <string name="app_add_manual_title">Enter detail account</string>




    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_keyword">Enter keyword</string>
    <string name="label_from_date">From date</string>
    <string name="label_to_date">To date</string>
    <string name="label_search_type">Search type:</string>
    <string name="search_type_everything">All articles</string>
    <string name="search_type_top_headlines">Top headlines</string>
    <string name="label_category">Category:</string>
    <string name="label_search_in">Search in:</string>
    <string name="label_sort_by">Sort by:</string>
    <string name="btn_search">Search</string>
    <string name="btn_close">Close</string>
    <string name="label_keyword_error">key word can not be blank</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="search_news">Search News</string>
    <string name="close">Close</string>
    <string name="select_language">Select Language</string>
    <string name="top_headlines">Top headlines</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="loading">Loading...</string>

    <string-array name="news_categories">
        <item>Business</item>
        <item>Entertainment</item>
        <item>Health</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
    </string-array>

    <string-array name="sort_options">
        <item>Relevancy</item>
        <item>Popularity</item>
        <item>PublishedAt</item>
    </string-array>

    <string-array name="news_search_in">
        <item>Title</item>
        <item>Description</item>
        <item>Content</item>
    </string-array>
</resources>