<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/border_bottom_sheet_capture"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout

        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivClose"
            android:src="@drawable/ic_capture_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llAddNew"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvHeaderAdd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/color_black"
                    android:textSize="16sp"
                    android:text="@string/dialog_add_token_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvScanQR"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:drawableLeft="@drawable/ic_capture_camera"
                    android:drawablePadding="10sp"
                    android:gravity="center|left"
                    android:text="@string/dialog_scan_qr"
                    android:textColor="@color/color_black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvEnterSetupKey"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:drawableLeft="@drawable/ic_add_manual"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:text="@string/dialog_enter_key"
                    android:textColor="@color/color_black"
                    android:textSize="20sp" />


            </LinearLayout>



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>